# gstjack-windows

./: CMakeLists.txt  CMakeSettings.json
